<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>io.cloudsoft.cloudera</groupId>
    <artifactId>brooklyn-cdh</artifactId>
    <version>1.1.0</version>
    <packaging>jar</packaging>
    
    <name>Brooklyn Cloudera Manager and Hadoop Descriptor</name>
    <description>
        Brooklyn CDH deployment and management
    </description>
    <url>https://github.com/cloudsoft/brooklyn-cdh/</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Brooklyn-CDH Committers</name>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/cloudsoft/brooklyn-cdh.git</connection>
        <developerConnection>scm:git:git@github.com:cloudsoft/brooklyn-cdh.git</developerConnection>
        <url>http://github.com/cloudsoft/brooklyn-cdh</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <groovy.version>1.8.6</groovy.version>
        <testng.version>6.3.1</testng.version>
        <brooklyn.version>0.5.0</brooklyn.version>
        <cloudera-whirr-cdh.version>0.8.0-cdh4.1.3</cloudera-whirr-cdh.version>
        <surefire.version>2.13</surefire.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.brooklyn</groupId>
            <artifactId>brooklyn-all</artifactId>
            <version>${brooklyn.version}</version>
        </dependency>
        <dependency>
            <groupId>io.brooklyn</groupId>
            <artifactId>brooklyn-test-support</artifactId>
            <version>${brooklyn.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.cloudera.whirr</groupId>
            <artifactId>whirr-cm</artifactId>
            <version>${cloudera-whirr-cdh.version}</version>
        </dependency>
        <dependency>
            <!-- web testing -->
            <groupId>org.simpleframework</groupId>
            <artifactId>simple</artifactId>
            <version>4.1.9</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <!-- enable sonatype snapshots repo (only for snapshots) -->
        <repository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases> <enabled>false</enabled> </releases>
            <snapshots> <enabled>true</enabled> </snapshots>
        </repository>
        <repository>
            <id>cloudera-releases</id>
            <url>https://repository.cloudera.com/content/groups/cdh-releases-rcs</url>
        </repository>
    </repositories>

    <build>
        <testSourceDirectory>src/test/java</testSourceDirectory>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.3.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.5</version>
                </plugin>
                <plugin>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>1.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>2.9</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.3.1</version>
                </plugin>

                <plugin>
                    <artifactId>maven-eclipse-plugin</artifactId>
                    <version>2.8</version>
                    <configuration>
                        <additionalProjectnatures>
                            <projectnature>org.eclipse.jdt.groovy.core.groovyNature</projectnature>
                            <projectnature>org.maven.ide.eclipse.maven2Nature</projectnature>
                        </additionalProjectnatures>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerId>groovy-eclipse-compiler</compilerId>
                    <fork>true</fork>
                    <verbose>false</verbose>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.codehaus.groovy</groupId>
                        <artifactId>groovy-eclipse-compiler</artifactId>
                        <version>2.6.0-01</version>
                    </dependency>
                    <dependency>
                        <groupId>org.codehaus.groovy</groupId>
                        <artifactId>groovy-eclipse-batch</artifactId>
                        <version>1.8.6-01</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.2.2</version>
                <!-- The configuration of the plugin -->
                <configuration>
                    <!-- Specifies the configuration file of the assembly plugin -->
                    <descriptors>
                        <descriptor>src/main/assembly/assembly.xml</descriptor>
                    </descriptors>
                </configuration>
            </plugin>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>2.1.2</version>
                    <inherited>true</inherited>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.8</version>
                    <inherited>true</inherited>
                    <configuration>
                        <!-- disabling use because of NPE deploying to sonatype:
                             http://stackoverflow.com/questions/888199/why-does-maven-install-fail-during-javadoc-generation
                             http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=ac084ab7f47c4e7f1df2117cecd?bug_id=5101868
                        -->
                        <use>false</use>
                        <links>
                            <link>http://download.oracle.com/javaee/6/api</link>
                        </links>
                        <keywords>true</keywords>
                        <author>false</author>
                        <quiet>true</quiet>
                        <aggregate>false</aggregate>
                        <detectLinks />
                        <tags>
                            <tag>
                                <name>todo</name>
                                <placement>a</placement>
                                <head>To-do:</head>
                            </tag>
                        </tags>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>1.1</version>
                    <executions>
                        <execution>
                            <id>sign-artifacts</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>sign</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <!-- 'release' is not used; easier just to checkout, tag, `mvn deploy` manually
                         with -Dbrooklyn.deployTo=TARGET ... and note we need to update docs and examples, 
                         which is a non-maven task!) -->
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.1</version>
                    <configuration>
                        <mavenExecutorId>forked-path</mavenExecutorId>
                        <useReleaseProfile>false</useReleaseProfile>
                        <arguments>-Dbrooklyn.deployTo=sonatype</arguments>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.4.1</version>
                </plugin>
                <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${surefire.version}</version>
                     <configuration>
                         <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
                    </configuration>
                </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- sign and make javadoc when deploying; note, this means you'll need gpg set up to deploy -->
        <profile>
            <id>make-more-things-when-deploying</id>
            <activation> <property><name>brooklyn.deployTo</name></property> </activation>            
            <build><plugins>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                </plugin>
                <plugin>
                    <artifactId>maven-gpg-plugin</artifactId>
                </plugin>
            </plugins></build>
        </profile>

        <!-- different properties used to deploy to different locations depending on profiles;
            default is cloudsoft filesystem repo, but some sources still use cloudsoft artifactory as source
            (and soon we will support artifactory) -->
        <profile>
            <id>cloudsoft-filesystem-repo</id>
            <activation> <property><name>brooklyn.deployTo</name><value>cloudsoftFilesystem</value></property> </activation>
            <distributionManagement>
                <repository>
                    <id>cloudsoft-deploy-cloudfront-origin-releases</id>
                    <name>Cloudsoft Release Filesystem repo (used as origin for cloudfront)</name>
                    <url>scpexe://root@developers-origin.cloudsoftcorp.com/var/www/developers/maven/releases/</url>
                </repository>
                <snapshotRepository>
                    <id>cloudsoft-deploy-cloudfront-origin-snapshots</id>
                    <name>Cloudsoft Snapshot Filesystem repo (used as origin for cloudfront)</name>
                    <url>scpexe://root@developers-origin.cloudsoftcorp.com/var/www/developers/maven/snapshots/</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
        <profile>
            <id>cloudsoft-artifactory-repo</id>
            <activation> <property><name>brooklyn.deployTo</name><value>cloudsoftArtifactory</value></property> </activation>
            <distributionManagement>
                <repository>
                    <id>cloudsoft-deploy-artifactory-release</id>
                    <name>Cloudsoft Artifactory libs-release-local repo</name>
                    <url>http://ccweb.cloudsoftcorp.com/maven/libs-release-local/</url>
                </repository>
                <snapshotRepository>
                    <id>cloudsoft-deploy-artifactory-snapshot</id>
                    <name>Cloudsoft Artifactory libs-snapshot-local repo</name>
                    <url>http://ccweb.cloudsoftcorp.com/maven/libs-snapshot-local/</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
        <profile>
            <id>sonatype-nexus-repo</id>
            <activation> <property><name>brooklyn.deployTo</name><value>sonatype</value></property> </activation>
            <distributionManagement>
                <repository>
                    <id>sonatype-nexus-staging</id>
                    <name>Nexus Release Repository</name>
                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
                <snapshotRepository>
                    <id>sonatype-nexus-snapshots</id>
                    <name>Sonatype Nexus Snapshots</name>
                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
    </profiles>

</project>
